# concord

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
accord/: CMakeLists.txt  hello.hpp
accord/syscall/: wait.hpp
accord/syscall/wait/: apple.cpp  linux.cpp  wait.cpp  wait.hpp  windows.cpp
accord/syscall/wait/platform/: apple.hpp  linux.hpp  wait.hpp  windows.hpp
axis/: CMakeLists.txt
axis/container/: intrusive_list.hpp
axis/core/: bithacks.hpp  defer.hpp  incel.hpp  preprocessor.hpp  sanitizer.hpp
axis/monad/: maybe.hpp  result.hpp  unit.hpp
axis/monad/combinator/: and_then.hpp  map.hpp  or_else.hpp
axis/monad/maybe/: make.hpp  pipe.hpp  type.hpp
axis/monad/result/: make.hpp  pipe.hpp  trait.hpp  type.hpp
axis/monad/result/combinator/: and_then.hpp  map.hpp  or_else.hpp
axis/monad/trait/: is_maybe.hpp  is_result.hpp  value_of.hpp
cmake/: CheckCompiler.cmake  CompileOptions.cmake  Dependencies.cmake  Logging.cmake  Platform.cmake  Sanitize.cmake
concord/: CMakeLists.txt  hello.hpp
concord/cord/: awaiter.hpp  cord.cpp  cord.hpp  coroutine.cpp  coroutine.hpp  current.hpp  fwd.hpp  go.hpp  handle.cpp  handle.hpp  runnable.hpp  stack.hpp  suspend.cpp  suspend.hpp
concord/cord/context/: context.S  context.cpp  context.hpp  sanitized.cpp  sanitized.hpp
concord/cord/sync/: event.cpp  event.hpp  mpsc_queue.hpp  mpsc_stack.hpp  mutex.cpp  mutex.hpp
concord/future/: concepts.hpp  future_local.hpp  get.hpp  just.hpp  map.hpp  model.hpp  pipe.hpp  ready.hpp  with.hpp
concord/future/comb/: with.hpp
concord/future/fire/: get.hpp
concord/future/thunk/: just.hpp  map.hpp  ready.hpp  with.hpp
concord/os/mmap/: mmap.cpp  mmap.hpp
concord/os/mmap/platform/: posix.hpp
concord/os/sync/: event.cpp  event.hpp  mutex.cpp  mutex.hpp  spinlock.cpp  spinlock.hpp  spinner.hpp  wait_group.cpp  wait_group.hpp
concord/os/wait/: wait.cpp  wait.hpp
concord/os/wait/atomic/: u32.hpp  u64.hpp  wait.hpp
concord/os/wait/platform/: apple.hpp  linux.hpp  windows.hpp
concord/runtime/: intrusive_task.hpp  runtime.hpp  task.hpp
concord/runtime/io/: uring.cpp  uring.hpp
concord/runtime/loop/: loop.cpp  loop.hpp
concord/runtime/thread/: queue.hpp  thread_pool.cpp  thread_pool.hpp
concord/syscall/mmap/: mmap.cpp  mmap.hpp
concord/syscall/mmap/platform/: mmap.hpp  posix.hpp  windows.hpp
concord/syscall/wait/: wait.cpp  wait.hpp
concord/syscall/wait/atomic/: u32.hpp  u64.hpp  wait.hpp
concord/syscall/wait/platform/: apple.hpp  linux.hpp  wait.hpp  windows.hpp
concord/thread/: mutex.hpp
playground/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/axis/container/: intrusive_list.test.cpp
tests/axis/core/: bithacks.test.cpp  incel.test.cpp
